--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>{{ page.title }}</title>
+        <title>{{ page.title }} - NateROCKS112</title>
         <link rel="shortcut icon" type="image/png" href=
             "https://crafatar.com/avatars/8bf41b0f-f2b2-4e8d-8837-542b43178ca3.png?overlay=true&size=16" />
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
