Add proper favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,8 +1,8 @@
 <html>
     <head>
         <title>{{ page.title }} - NateROCKS112</title>
-        <link rel="shortcut icon" type="image/png" href=
-            "https://crafatar.com/avatars/8bf41b0f-f2b2-4e8d-8837-542b43178ca3.png?overlay=true&size=16" />
+        <link rel="shortcut icon" type="image/ico" href=
+            "/favicon.ico" />
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
         <script type="text/javascript">
             var BFTN_WIDGET_OPTIONS = {
