--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>{{ page.title }} - NateROCKS112</title>
-        <link rel="favicon" href=
+        <link rel="shortcut icon" href=
             "/favicon.ico" />
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
         <script type="text/javascript">
