Added CSS back (after impulsive commit)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
             }
         </script>
         <script src="https://june11.battleforthenet.com/widget.js" async></script>
+        <link rel="stylesheet" type="text/css" href="/css/main.css" />
     </head>
     <body>
         <div id="header">
