--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,26 +4,26 @@
         <link rel="shortcut icon" href=
             "https://nathaniel.fitzenrider.com/favicon.ico">
         <!-- ****** faviconit.com favicons ****** -->
-        <link rel="shortcut icon" href="favicons/favicon.ico">
-        <link rel="icon" sizes="16x16 32x32 64x64" href="favicons/favicon.ico">
-        <link rel="icon" type="image/png" sizes="196x196" href="favicons/favicon-192.png">
-        <link rel="icon" type="image/png" sizes="160x160" href="favicons/favicon-160.png">
-        <link rel="icon" type="image/png" sizes="96x96" href="favicons/favicon-96.png">
-        <link rel="icon" type="image/png" sizes="64x64" href="favicons/favicon-64.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16.png">
-        <link rel="apple-touch-icon" href="favicons/favicon-57.png">
-        <link rel="apple-touch-icon" sizes="114x114" href="favicons/favicon-114.png">
-        <link rel="apple-touch-icon" sizes="72x72" href="favicons/favicon-72.png">
-        <link rel="apple-touch-icon" sizes="144x144" href="favicons/favicon-144.png">
-        <link rel="apple-touch-icon" sizes="60x60" href="favicons/favicon-60.png">
-        <link rel="apple-touch-icon" sizes="120x120" href="favicons/favicon-120.png">
-        <link rel="apple-touch-icon" sizes="76x76" href="favicons/favicon-76.png">
-        <link rel="apple-touch-icon" sizes="152x152" href="favicons/favicon-152.png">
-        <link rel="apple-touch-icon" sizes="180x180" href="favicons/favicon-180.png">
+        <link rel="shortcut icon" href="/favicons/favicon.ico">
+        <link rel="icon" sizes="16x16 32x32 64x64" href="/favicons/favicon.ico">
+        <link rel="icon" type="image/png" sizes="196x196" href="/favicons/favicon-192.png">
+        <link rel="icon" type="image/png" sizes="160x160" href="/favicons/favicon-160.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="/favicons/favicon-96.png">
+        <link rel="icon" type="image/png" sizes="64x64" href="/favicons/favicon-64.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16.png">
+        <link rel="apple-touch-icon" href="/favicons/favicon-57.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="/favicons/favicon-114.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="/favicons/favicon-72.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="/favicons/favicon-144.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="/favicons/favicon-60.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="/favicons/favicon-120.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="/favicons/favicon-76.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="/favicons/favicon-152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="/favicons/favicon-180.png">
         <meta name="msapplication-TileColor" content="#FFFFFF">
-        <meta name="msapplication-TileImage" content="favicons/favicon-144.png">
-        <meta name="msapplication-config" content="favicons/browserconfig.xml">
+        <meta name="msapplication-TileImage" content="/favicons/favicon-144.png">
+        <meta name="msapplication-config" content="/favicons/browserconfig.xml">
         <!-- ****** faviconit.com favicons ****** -->
         <script type="text/javascript">
             var BFTN_WIDGET_OPTIONS = {
@@ -40,19 +40,19 @@
                 <div id="logo-text">NateROCKS112</div>
             </div>
             <div id="header-menu">
-                
+
                 <button id="home-btn" onclick="location.href='/'">HOME</button>
-                
+
                 <button id="youtube-btn" onclick="window.open('https://www.youtube.com/user/NateROCKS112')">YOUTUBE</button>
-                
-                <button onclick="window.open('https://twitter.com/NateROCKS112')" id="twitter-btn">TWITTER</button>
-                    
+
+                <button onclick="window.open('/twitter')" id="twitter-btn">TWITTER</button>
+
                 <button onclick="location.href='/mc-content/only-one-command/'" id="ooc-btn" title="Only One Command creations">OOC</button>
             </div>
         </div>
-        
+
         <hr style="width:900px">
-        
+
         <div id="container">{{ content }}</div>
     </body>
 
