Update BftN widget

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
                 disableGoogleAnalytics: true
             }
         </script>
-        <script src="https://june11.battleforthenet.com/widget.js" async></script>
+        <script src="https://july23.battleforthenet.com/widget.js" async></script>
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
     </head>
     <body>
