Added Twitch and updated Twitter button

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,12 +40,13 @@
                 <div id="logo-text">NateROCKS112</div>
             </div>
             <div id="header-menu">
-
                 <button id="home-btn" onclick="location.href='/'">HOME</button>
+
+                <button id="twitch-btn" onclick="window.open('https://www.twitch.tv/naterocks112')">TWITCH</button>
 
                 <button id="youtube-btn" onclick="window.open('https://www.youtube.com/user/NateROCKS112')">YOUTUBE</button>
 
-                <button onclick="window.open('/twitter')" id="twitter-btn">TWITTER</button>
+                <button onclick="window.open('https://twitter.com/TechnicusFatuus')" id="twitter-btn">TWITTER</button>
 
                 <button onclick="location.href='/mc-content/only-one-command/'" id="ooc-btn" title="Only One Command creations">OOC</button>
             </div>
