--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,9 @@
         </script>
         <script src="https://july23.battleforthenet.com/widget.js" async></script>
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
+        {% if page.jquery == true %}
+             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        {% endif %}
     </head>
     <body>
         <div id="header">
