--- a/_layouts/redirect.html
+++ b/_layouts/redirect.html
@@ -3,6 +3,7 @@
     <head>
         <title>{{ page.title }}</title>
         <link rel="canonical" href="{{ page.redirect.to }}">
+        <meta http-equiv="refresh" content="0; URL='{{ page.redirect.to }}'"
     </head>
     <body>
         <p>You should be redirecting to here right now:</p>
