--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,10 +30,10 @@
                 disableGoogleAnalytics: true
             }
         </script>
-        <script src="https://watch.battleforthenet.com/widget.js" async></script>
+        <script src="https://widget.battleforthenet.com/widget.js" async></script>
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
         {% if page.jquery == true %}
-             <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+             <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
         {% endif %}
     </head>
     <body>
