Remove newline at EOF

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,7 @@
 
                 <button id="youtube-btn" onclick="window.open('https://www.youtube.com/user/NateROCKS112')">YOUTUBE</button>
 
-                <button onclick="window.open('https://twitter.com/TechnicusFatuus')" id="twitter-btn">TWITTER</button>
+                <button onclick="window.open('https://twitter.com/NateROCKS112')" id="twitter-btn">TWITTER</button>
 
                 <button onclick="location.href='/mc-content/only-one-command/'" id="ooc-btn" title="Only One Command creations">OOC</button>
             </div>
