--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,9 @@
                 async></script>
         <link rel="stylesheet" type="text/css" href="/css/main.css" />
         {% if page.jquery == true %}
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
-                    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
-                    crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+                integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+                crossorigin="anonymous"></script>
         {% endif %}
     </head>
     <body>
@@ -66,7 +66,7 @@
             </div>
         </div>
 
-        <hr style="width:900px">
+        <hr style="width:900px" />
 
         <div id="container">{{ content }}</div>
     </body>
