--- a/src/css/main.css
+++ b/src/css/main.css
@@ -18,7 +18,7 @@ p#nn {
 
 body {
 
-    font-family: "Super Mario 256";
+    font-family: 'Times New Roman', Times, serif;
 
     background-color: black;
 }
